paper2/tests/ui/delivery_struct_literal.stderr
error[E0451]: fields `verdict_bytes`, `log_index` and `signature_bytes` of struct `DeliveryToken` are private
  --> tests/ui/delivery_struct_literal.rs:11:9
   |
10 |     let _t = DeliveryToken {
   |              ------------- in this type
11 |         verdict_bytes: vec![],
   |         ^^^^^^^^^^^^^ private field
12 |         log_index: 0,
   |         ^^^^^^^^^ private field
13 |         signature_bytes: vec![],
   |         ^^^^^^^^^^^^^^^ private field
